--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-  <!--
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/app_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/Theme.CriminalIntent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-   -->
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
@@ -25,6 +22,7 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         tools:context=".MainActivity" />
 
 </LinearLayout>
