--- a/app/src/main/res/layout/list_item_player.xml
+++ b/app/src/main/res/layout/list_item_player.xml
@@ -15,6 +15,7 @@
         android:text="Player Username"
         android:padding="6dp"
         android:textAppearance="?attr/textAppearanceHeadline6"
+        android:theme="@style/Theme.AppCompat.Light"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
